2005-04-25 Scott Dattalo <scott@dattalo.com>
	* src/trigger.h, src/trigger.cc, src/breakpoints.cc: Added complex 
	expressions to the TriggerObject class. (not complete)

2005-04-23 Borut Razem <borut.razem@siol.net>
	* src/bitlog.cc, src/bytelog.cc, src/ttoken.cc: removed #define IN_MODULE
	* plat/win32/gpsim.def, modules/makefile.mingw, src/makefile.mingw,
	modules/modules.vcproj, src/src.vcproj: MINGW sync
	* gpsim/makefile.mingw: force linker to onclude BoolEventLogger class
	methods in gpsim.exe, so that they can be referenced by modules
	* src/modules.cc (get_attribute): fixed attribute name comparison
	* src/sim_context.h: added end of line at end of file
	* plat/win32/gpsim.nsi: remove pthreadVC1.dll

2005-04-22 Scott Dattalo <scott@dattalo.com>
	* bitlog.cc, bitlog.h, bytelog.cc, bytelog.h, ttoken.cc, ttoken.h,
	pthread-wrap.h: moved these from the modules/ directory into the
	src/ directory.

2005-04-19 J.R. Heisey <jrheisey@sourceforge.com>
	* src/breakpoints.cc, src/processor.cc, src/processor.h:
	Fixed corruption when clearing a Breakpoint_Instruction object.
	The object was not removed properly from the chain of instruction
	objects in the pma.

2005-04-19 Scott Dattalo <scott@dattalo.com>
	* src/os_dependent.cc: Added 'errno.h' to the list of include
	files. (without this, os_dependent.cc wouldn't compile on
	FC3-64bit). 

2005-04-19 Scott Dattalo <scott@dattalo.com>
	* src/symbol.cc, src/symbol.h: Fixed reference to symbol table
	that was preventing compilation on Linux.

2005-04-19 J.R. Heisey <jrheisey@sourceforge.com>
	*  gui/gui_src_asm.cc, gui/gui_statusbar.cc, gui/gui_statusbar.h:
	Modified the statusbar so that it can handle a switch from
	one processor to another.
	* src/sim_context.cc, src/symbol.cc,h: Fixed a crash on gpsim
	exit.
	* src/os_dependent.c: added test in load_library() to the first
	call to sLoad() to determine whether the a failure was due
	to the library file not found or some other error. This needs