@@ -38,9 +38,10 @@ public:
   void set_break(Value *);
   void set_break(cmd_options *co, Value *pValue);
   void set_break(cmd_options *co, Expression *pExpr);
+  void set_break(cmd_options *co, Value *pValue, Expression *pExpr);
   void set_break(int bit_flag,guint64 reg, guint64 value,guint64 mask);
   void set_break(int bit_flag);
-  void set_break(int bit_flag,guint64 value);
+  int  set_break(int bit_flag,guint64 value);
 private:
 
 };
